# AutoOven

./: OvenTemp.ino
Testing/: 08092024data.txt  Testing.ino  boilwatercoolinroom.txt  putty.tsv  putty_water_test_2.txt  putty_water_to_boil.txt  puttywater.tsv
TimeTeensy3Test/: TimeTeensy3Test.ino
cpp_testing/: CMakeLists.txt
cpp_testing/program/: CMakeCache.txt
cpp_testing/program/include/: my_library.h
cpp_testing/program/src/: main.cpp  ny_library.cpp
